Se agregan formularios de busqueda para usuarios, etiquetas y categorias

--- a/public/plugins/bootstrap/css/bootstrap.css
+++ b/public/plugins/bootstrap/css/bootstrap.css
@@ -10,7 +10,7 @@ html {
       -ms-text-size-adjust: 100%;
 }
 body {
-  margin: 0;
+  margin: 0;  
 }
 article,
 aside,
@@ -1086,7 +1086,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
-  background-color: #fff;
+  background-color: #eee;
 }
 input,
 button,
