Filtra articulos por categoria y por etiquetas

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -10,3 +10,12 @@ body {
 footer {
 	padding: 1%;
 }
+
+a.tag-link {
+	text-decoration: none;
+}
+
+a.logo-link {
+	text-decoration: none;
+	color: #444;
+}
