Agrega Discus al proyecto

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -19,3 +19,13 @@ a.logo-link {
 	text-decoration: none;
 	color: #444;
 }
+
+a.article-tag {
+	text-decoration: none;
+	color: #fff;
+}
+
+.img-article {
+	min-height: 300px;
+	max-width: 300px;
+}
